# CrossDatasetLearningEEG

./: .coverage  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
scripts/: .coverage
scripts/dataset_downloads/: hatlestad_hall.py  makowski.py  miltiadous.py  mpi_lemon.py  rockhill.py  yulin_wang.py
scripts/debugging/: debugging_td_brain.py
scripts/models/: experiment_suggestions.txt
scripts/models/exploration/: config.yml  latent_features_umap.py  scripts.bash
scripts/models/training/: age_prediction.py  config_generator_random_search.py  experts_and_ml_debug.py  hyperparameter_random_search.py  ml_dl_representations.py  multiple_scripts.bash  multiple_scripts_round_2.bash  multiple_scripts_round_2_continuation.bash  random_search_age_prediction.py  single_experiment.py  single_experiment_round_2.py  ssl_debug_script.py  transfer_learning_debug.py  tsne_debug_script.py
scripts/save_numpy_arrays/: cau_eeg.py  config.yml  config_domains.yml  generate_many_numpy_arrays.bash  generate_numpy_arrays.py  hatlestad_hall.py  miltiadous.py  ous.py  rockhill.py  van_hees.py  yulin_wang.py
scripts/save_numpy_arrays/config_files/: config_1.yml
scripts/visualisations/: amplitude_envelope_corr_example.py  yulin_wang_clean_vis.py
scripts/visualisations/data/: cau_eeg.py  child_mind.py  makowski.py  (+10 more)
src/CrossDatasetLearningEEG.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: .coverage
tests/data/: .coverage  combined_datasets.py  test_combined_datasets.py  test_interpolate_datasets.py
(+185 files in other folders)
