[metadata]
name = CrossDatasetLearningEEG
description = Cross dataset learning in EEG
author = Thomas Tveitstoel
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    find:
install_requires =
    requests>=2
    numpy>=1.2
    inflection~=0.5.1
python_requires = >=3.8
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
cdl_eeg = py.typed

[options.packages.find]
where = src
include = cdl_eeg.*

[flake8]
max-line-length = 120